# paxos-rs

./: Cargo.toml  LICENSE  README.md  build.rs  messages.capnp
.github/: dependabot.yml
.github/workflows/: rust.yml
examples/http-paxos/: README.md  commands.rs  kvstore.rs  main.rs  service.rs
schema/: messages.capnp
src/: acceptor.rs  bytes_value.rs  chain.rs  commands.rs  config.rs  instance.rs  lib.rs  liveness.rs  machine.rs  main.rs  master.rs  messages.rs  messenger.rs  msg.rs  multipaxos.rs  net.rs  node.rs  proposals.rs  proposer.rs  register.rs  replica.rs  retry.rs  state.rs  statemachine.rs  timer.rs  value.rs  window.rs
src/algo/: instance.rs  messages.rs  mod.rs
src/multi_paxos/: commands.rs  mod.rs  replica.rs  window.rs
src/paxos/: acceptor.rs  instance.rs  messages.rs  mod.rs  proposer.rs
