[package]
authors = ["Zack Owens <zowens2009@gmail.com>"]
name = "paxos"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
bytes = { version = "0.6", features = ["serde"] }

[dev-dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
bytes = { version = "0.6", features = ["serde"] }
bincode = "1.3"
hyper = "0.13"
tokio = { version = "0.2", features = ["rt-core","macros","sync"] }
env_logger = "0.8.2"
rand = "0.7.3"
futures-util = "0.3"
