[package]
authors = ["Zack Owens <zowens2009@gmail.com>"]
name = "paxos"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
bytes = { version = "1.6.0", features = ["serde"] }

[dev-dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
bytes = { version = "1.6.0", features = ["serde"] }
bincode = "1.3"
hyper = { version = "0.14.26", features = ["client", "server", "http1", "tcp"] }
tokio = { version = "1.27", features = ["rt", "time", "macros","sync"] }
env_logger = "0.11.3"
rand = "0.8.5"
futures-util = "0.3"
